//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package mutex;

message ExampleParkingLotMutex {
  MutexInner value = 1;
}

message ExampleStdMutex {
  MutexInner value = 1;
}

message MutexInner {
  string value = 1;
  uint32 count = 2;
}

message ParkingLotMutexHolder {
  MutexInner inner = 1;
}

message StdMutexHolder {
  MutexInner inner = 1;
}

